# bmi_roms

./: README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
binder/: environment.yml
bmi_roms/: __init__.py  _version.py  bmi.py  utils.py
docs/source/: conf.py  index.md  index.rst
notebooks/: bmi_roms.ipynb  config_file.yaml
src/bmi_roms/: __init__.py  bmi.py  errors.py  utils.py
tests/: test_util.py  util_test.py
